--- a/templates/index.html
+++ b/templates/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>URL Shortener</title>
+    <title>NIneza shorter URL</title>
+    <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body>
     <h1>URL Shortener</h1>
     <form id="urlForm">
         <input type="text" id="longUrl" placeholder="Enter your long URL">
-        <button type="submit">Nineza Shorten URL</button>
+        <button type="submit">Shorten URL</button>
     </form>
     <div id="shortenedUrl"></div>
 
